Added serverside url ping, and javascript ajaxcall to this function

--- a/pom.xml
+++ b/pom.xml
@@ -129,6 +129,11 @@
 			<scope>test</scope>
 		</dependency>
 
+		<dependency>
+			<groupId>org.codehaus.jackson</groupId>
+			<artifactId>jackson-mapper-asl</artifactId>
+			<version>1.9.3</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
