--- a/pom.xml
+++ b/pom.xml
@@ -149,7 +149,7 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-war-plugin</artifactId>
 				<configuration>
-					<warName>abc</warName>
+					<warName>${project.name}</warName>
 				</configuration>
 			</plugin>
 			<plugin>
