--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,12 @@
 			<version>${org.springframework-version}</version>
 		</dependency>
 
+      	<dependency>
+    	    <groupId>org.springframework</groupId>
+	        <artifactId>spring-jdbc</artifactId>
+        	<version>${org.springframework-version}</version>
+      	</dependency>
+      
 		<!-- AspectJ -->
 		<dependency>
 			<groupId>org.aspectj</groupId>
@@ -119,6 +125,13 @@
 			<groupId>org.apache.httpcomponents</groupId>
 			<artifactId>httpclient</artifactId>
 			<version>4.2-alpha1</version>
+		</dependency>
+
+		<!-- JDBC -->
+		<dependency>
+  			<groupId>oracle.ojdbc</groupId>
+  			<artifactId>ojdbc</artifactId>
+  			<version>1.6</version>
 		</dependency>
 
 		<!-- Test -->
